k8s-prod/03-udp-postgrestapi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udp-postgrestapi
  namespace: ba-udp
  labels:
    app: udp-postgrestapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: udp-postgrestapi
  template:
    metadata:
      labels:
        app: udp-postgrestapi
    spec:
      containers:
        - name: udp-postgrestapi
          image: postgrest/postgrest:v12.0.2
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: '256Mi'
              cpu: '200m'
            limits:
              memory: '512Mi'
              cpu: '500m'

          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 15 # รอ 15 วินาทีหลังเริ่ม Start เพื่อให้แอปพร้อม
            periodSeconds: 20 # ตรวจสอบทุกๆ 20 วินาที
            timeoutSeconds: 5 # ถ้าไม่ตอบภายใน 5 วินาทีถือว่าล้มเหลว
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: udp-postgrestapi
  namespace: ba-udp
spec:
  selector:
    app: udp-postgrestapi
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
