k8s-prod/08-udp-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udp-app
  namespace: ba-udp
  labels:
    app: udp-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: udp-app
  template:
    metadata:
      labels:
        app: udp-app
    spec:
      containers:
        - name: udp-app
          image: nccgit.qsncc.com:5555/ba/unified-data-platform:1.0.0-beta
          imagePullPolicy: Always
          ports:
            - containerPort: 8029
          resources:
            requests:
              memory: '512Mi'
              cpu: '250m'
            limits:
              memory: '2Gi'
              cpu: '1000m'

          # --- Liveness & Readiness Probe ---
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8029
            initialDelaySeconds: 60 # แอปตัวใหญ่ให้เวลารันหน่อย
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /api/health
              port: 8029
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: udp-app
  namespace: ba-udp
spec:
  selector:
    app: udp-app
  ports:
    - protocol: TCP
      port: 8029
      targetPort: 8029
  type: ClusterIP
